examples/test/testpolicy13148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13148
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key34: value33
      key21: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value42
      podSelector:
        matchLabels:
          key38: value3
          key40: value33
